--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
 PORT = 8080
-DATABASE_LINK=mongodb+srv://karkiluckey0050:dfz18IWIqsoMlQLG@cluster0.bayge.mongodb.net/
+DATABASE_LINK=mongodb+srv://bibekshah425:DvKHiqAAUFWNMHUM@cluster0.l7rkn.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 SECRET_KEY = 6Lcp3T0qAAAAALISUvfiGR_58AV4KGLThFqBTX5W
 EMAIL = karkisuman0001@gmail.com
 PASSWORD = xkfd zajm jfua jlaj
